[tool.poetry]
name = "health_insurance_cross_sell"
version = "0.1.0"
description = ""
authors = ["Kaisson Ferreira <kaysson_17@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
sklearn = "^0.0"
plotly = "^5.10.0"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
